@@ -207,6 +207,7 @@ gradle.taskGraph.whenReady({ graph ->
                 "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
 
                 "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-exports=java.base/sun.reflect.generics.repository=ALL-UNNAMED",
                 "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
                 "--add-exports=java.management/com.sun.jmx.remote.security=ALL-UNNAMED",
         ]
